--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-    <!--Find out what descriptor goes before "UTF-8"-->
-    <head UTF-8>
-    <header>Odin Recipes</header>
+    <head>
+        <meta charset="UTF-8">
+        <title>Odin Recipes</title>
     </head>
     
     <body>
