--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head UTF-8>
+    <head>
+        <meta charset="UTF-8">
     </head>
     <body>
         <h1>Pancakes</h1>
