Delete Unnecessary Header files

--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -8,8 +8,5 @@
             <img src="/recipe-images/pancake-img.jpg" height="300">
             <p>These pancakes are <strong>tall</strong> and <strong>fluffy</strong>. This recipe will not only include the pancakes, <br> 
             but also will include a berry topping on top!</p>
-
-        <h1>Reuban</h1>
-
-        <h1>White Wine Shrimp</h1>
+    </body>
 </html>
