--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -7,6 +7,24 @@
         <h1>Pancakes</h1>
             <img src="/recipe-images/pancake-img.jpg" height="300">
             <p>These pancakes are <strong>tall</strong> and <strong>fluffy</strong>. This recipe will not only include the pancakes, <br> 
-            but also will include a berry topping on top!</p>
+            but also will include a berry topping on top!</p> 
+            <h3>Ingredients</h3>
+            <ul>
+                <li>1 1/2 cups all-purpose flour</li>
+                <li>3 1/2 tsp baking powder</li>
+                <li>1/4 tsp salt, or more to taste</li>
+                <li>1 tbls white sugar</li>
+                <li>1 1/4 cups milk</li>
+                <li>1 egg</li>
+                <li>3 tbsp butter, melted</li>
+            </ul>
+            <h3>Directions</h3>
+            <ol>
+                <li>In a large bowl, sift together the flour, baking powder, salt and sugar.</li>
+                <li>Make a well in the center and pour in the milk, egg and melted butter; mix until smooth.</li>
+                <li>Heat a lightly oiled griddle or frying pan over medium-high heat. 
+                    Pour or scoop the batter onto the griddle, using approximately 1/4 cup for each pancake. 
+                    Brown on both sides and serve hot.</li>
+            </ol>
     </body>
 </html>
