Corrected Spelling Error Line 16

--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -13,7 +13,7 @@
                 <li>1 1/2 cups all-purpose flour</li>
                 <li>3 1/2 tsp baking powder</li>
                 <li>1/4 tsp salt, or more to taste</li>
-                <li>1 tbls white sugar</li>
+                <li>1 tbsp white sugar</li>
                 <li>1 1/4 cups milk</li>
                 <li>1 egg</li>
                 <li>3 tbsp butter, melted</li>
