Add Description of Reuban

--- a/recipes/reuban.html
+++ b/recipes/reuban.html
@@ -6,5 +6,13 @@
     <body>
         <h1>Reuban</h1>
         <img src="/recipe-images/reuban-img.jpeg"
+        
+        <h3>Description</h3>
+            <p>A delicious melt that many find themselves ordering in a diner!
+                This dish balances the fatty taste with the corned beef with saurcraut
+                as well as the rye bread!<br>
+                A good dish for a quick yet delightful lunch!
+            </p>
+            <br>
     </body>
 </html>
