--- a/recipes/reuban.html
+++ b/recipes/reuban.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Reuban</h1>
-        <img src="/recipe-images/reuban-img.jpeg"
+        <img src="/recipe-images/reuban-img.jpeg">
         
         <h3>Description</h3>
             <p>A delicious melt that many find themselves ordering in a diner!
@@ -14,5 +14,8 @@
                 A good dish for a quick yet delightful lunch!
             </p>
             <br>
+        
+        <h3>Ingredients</h3>
+            <
     </body>
 </html>
