Add Ingredients and Directions

--- a/recipes/reuban.html
+++ b/recipes/reuban.html
@@ -16,6 +16,27 @@
             <br>
         
         <h3>Ingredients</h3>
-            <
+            <ul>
+                <li>2 tbsp butter</li>
+                <li>8 slices rye bread</li>
+                <li>8 slices deli sliced corned beef</li>
+                <li>8 slices Swiss cheese</li>
+                <li>1 cup sauerkraut, drained</li>
+                <li>1/2 cup Thousand Island dressing</li>
+            </ul>
+        <h3>Directions</h3>
+            <ol>
+                <li>Preheat a large skillet or griddle on medium heat.</li>
+                <li>Lightly butter one side of bread slices. Spread non-buttered sides
+                    with Thousand Island dressing.
+                </li>
+                <li>On 4 bread slices, layer 1 slice Swiss chees, 2 slices corned beef,
+                     1/4 cup sauerkraut and second slice of swiss cheese. Top with remaining 
+                    bread slices, buttered sides out.
+                </li>
+                <li>Grill sandwiches until both sides are golden brown, about 5 minutes per side.
+                    Serve Hot.
+                </li>
+            </ol>
     </body>
 </html>
