--- a/recipes/white-wine-shrimp.html
+++ b/recipes/white-wine-shrimp.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <h1>White Wine Shrimp</h1>
+        <img src="/recipe-images/white-wine-shrimp.jpg">
     </body>
 </html>
