Add Ingredients and Directions list

--- a/recipes/white-wine-shrimp.html
+++ b/recipes/white-wine-shrimp.html
@@ -6,5 +6,33 @@
     <body>
         <h1>White Wine Shrimp</h1>
         <img src="/recipe-images/white-wine-shrimp.jpg">
+
+        <h3>Description</h3>
+        <p>This is one of the fancier meals we cover and yet it is delightfully simple!
+            This dish is rich with flavor that dance across the palate highlighting citrus, 
+            Umami, and freshness of seafood all on one plate! Whether it's a night for two 
+            or it's just for you. This dish is an absolute delicious choice!
+        </p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>8 ounces uncooked linguine</li>
+            <li>1/4 cup butter</li>
+            <li>2 tsp finely chopped fresh garlic</li>
+            <li>1 tsp dried parsley flakes</li>
+            <li>1/2 cup dry white wine</li>
+            <li>16 oz medium raw shrimp, peeled, deveined</li>
+            <li>1/2 cup shredded Parmesan cheese</li>
+        </ul>
+
+        <h3>Directions</h3>
+        <ol>
+            <li>Cook pasta according to package directions. Drain; keep warm. Set aside</li>
+            <li>Melt butter in 12 inch skillet over medium heat until sizzling. Add garlic 
+                and parsley; saute 30 seconds. Add wine; cook 1 minute. Add shrimp; cook, turning once, 
+                2-3 minutes or until shrimp are pink.
+            </li>
+            <li>Add hot, cooked pasta. Toss lightly until pasta is well coated. Sprinkle with Parmesan cheese.</li>
+        </ol>
     </body>
 </html>
