--- a/recipes/white-wine-shrimp.html
+++ b/recipes/white-wine-shrimp.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>White Wine Shrimp</h1>
-        <img src="/recipe-images/white-wine-shrimp.jpg">
+        <img src="../recipe-images/white-wine-shrimp.jpg">
 
         <h3>Description</h3>
         <p>This is one of the fancier meals we cover and yet it is delightfully simple!
