--- a/recipes/reuban.html
+++ b/recipes/reuban.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Reuban</h1>
-        <img src="../recipe-images/reuban-img.jpeg">
+        <img src="../recipe-images/reuban-img.jpeg" height="300" alt="A reuban cut in half with one leaned up on top of the other on top of a wooden cutting board.">
         
         <h3>Description</h3>
             <p>A delicious melt that many find themselves ordering in a diner!
