Add Line Break for Spacing

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     
     <body>
         <h1>Odin Recipes</h1>
-        <a href=recipes/pancakes.html>Pancakes</a>
-        <a href=recipes/reuban.html>Reuban</a>
+        <a href=recipes/pancakes.html>Pancakes</a><br>
+        <a href=recipes/reuban.html>Reuban</a><br>
         <a href="recipes/white-wine-shrimp.html">White Wine Shrimp</a>
     </body>
 </html>
