Add Class to 'Odin Recipes'

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles.css">
         <title>Odin Recipes</title>
     </head>
     
     <body>
         <h1>Odin Recipes</h1>
-        <a href=recipes/pancakes.html>Pancakes</a><br>
-        <a href=recipes/reuban.html>Reuban</a><br>
-        <a href="recipes/white-wine-shrimp.html">White Wine Shrimp</a>
+        <a class="link" href=recipes/pancakes.html>Pancakes</a><br>
+        <a class="link" href=recipes/reuban.html>Reuban</a><br>
+        <a class="link" href="recipes/white-wine-shrimp.html">White Wine Shrimp</a>
     </body>
 </html>
