--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -2,7 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../styles.css">
     </head>
+
     <body>
         <h1>Pancakes</h1>
             <img src="../recipe-images/pancake-img.jpg" height="300" alt="A 3 stack of fluffy pancakes with blueberrys and cut strawberries sprinkled on top and on the sides of the stack.">
@@ -10,13 +12,13 @@
             but also will include a berry topping on top!</p> 
             <h3>Ingredients</h3>
             <ul>
-                <li>1 1/2 cups all-purpose flour</li>
-                <li>3 1/2 tsp baking powder</li>
-                <li>1/4 tsp salt, or more to taste</li>
-                <li>1 tbsp white sugar</li>
-                <li>1 1/4 cups milk</li>
-                <li>1 egg</li>
-                <li>3 tbsp butter, melted</li>
+                <li class="ingredient">1 1/2 cups all-purpose flour</li>
+                <li class="ingredient">3 1/2 tsp baking powder</li>
+                <li class="ingredient">1/4 tsp salt, or more to taste</li>
+                <li class="ingredient">1 tbsp white sugar</li>
+                <li class="ingredient">1 1/4 cups milk</li>
+                <li class="ingredient">1 egg</li>
+                <li class="ingredient">3 tbsp butter, melted</li>
             </ul>
             <h3>Directions</h3>
             <ol>
